<resources>
    <string name="app_name">PaintApp</string>
    <string name="reset">Clear And Reset</string>
    <string name="background">Background Color</string>
    <string name="brushcolor">Brush Color</string>
    <string name="paint_settings">Paint settings</string>
    <string name="drawerOpen">Open</string>
    <string name="drawerClose">Close</string>
    <string name="settings">Settings</string>
    <string name="brushsize">Brush Size</string>
    <string name="bluron">Blur Brush On</string>
    <string name="bluroff">Blur Brush Off</string>
    <string name="undo">Undo</string>
    <string name="save_to_gallery">Save To Gallery</string>
    <string name="get_from_gallery">Get From Gallery</string>
</resources>
